// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title it renders 1`] = `
<EuiTitle
  size="l"
>
  <h1
    data-test-subj="header-page-title"
  >
    <Memo(TruncatedTextComponent)
      text="Test title"
    />
     
    <StyledEuiBetaBadge
      label="Beta"
      tooltipContent="Test tooltip"
      tooltipPosition="bottom"
    />
  </h1>
</EuiTitle>
`;

exports[`Title it renders the title if is not a string 1`] = `
<EuiTitle
  size="l"
>
  <h1
    data-test-subj="header-page-title"
  >
    <span>
      Test title
    </span>
  </h1>
</EuiTitle>
`;
